--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pnz/mattermost-client",
+    "name": "haresh-vidja/mattermost-client",
     "description": "Mattermost APi Client for PHP",
     "license": "MIT",
     "type": "library",
